tests/error/fork_value.gw
#! [contains] forks must be stored in a value
fork { <<< 1 >>>; };
